--- a/_pages/en/index.html
+++ b/_pages/en/index.html
@@ -10,7 +10,6 @@ permalink: /en/index.html
     <h1 property="name" id="wb-cont">{{ site.data.i18n.general.head.title.en }}</h1>
     <p>Explore how Canadian public administrations (federal, provincial, territorial and municipal) creates greater transparency, accountability, increases citizen engagement, and drives innovation and economic opportunities through open Standards, open source softwares, open data, open information, open dialogue and open Government.</p>
   </div>
-
   <div class="col-md-4 margin-top-small hidden-sm hidden-xs">
     <img src="../assets/logo_canada-ogp.png" alt="Map of Canada with Open Government Partnership colors" class="pull-right img-responsive thumbnail">
   </div>
@@ -21,60 +20,51 @@ permalink: /en/index.html
     <h1 property="name">Services</h1>
     <p>The Open Resource Exchange includes four main services that focus on sharing solutions in an open source format. The term open source refers to publicly accessible items that are freely available for use.</p>
   </div>
-
   <div class="col-md-4">
     <section class="panel panel-info">
-
       <header class="panel-heading">
-        <a href="{{ site.data.i18n.general.nav.code.link[page.lang] }}" style="color: inherit !important; text-decoration: none !important"><h5 class="panel-title">Open Source Code</h5></a>
+        <a href="{{ site.data.i18n.general.nav.code.link[page.lang] }}" class="panel-design"><h5 class="panel-title">Open Source Code</h5></a>
       </header>
-
-      <div class="panel-body" style="padding-bottom: 33px !important">
-        <div class="col-md-3" style="color: #31708f; font-size: 50px">
-          <a href="{{ site.data.i18n.general.nav.code.link[page.lang] }}" style="color: inherit !important; text-decoration: none !important"><i class="fas fa-code"></i></a>
+      <div class="panel-body mrgn-bttm-md">
+        <div class="col-md-3 font-size-50" style="color: #31708f">
+          <a href="{{ site.data.i18n.general.nav.code.link[page.lang] }}" class="panel-design"><i class="fas fa-code"></i></a>
         </div>
         <div class="col-md-9">
-          <p>Search open source projects and code repositories.</p>
+          <p>Search open source projects developed by Canadian public administrations.</p>
         </div>
       </div>
-
     </section>
   </div>
 
   <div class="col-md-4">
     <section class="panel panel-success">
       <header class="panel-heading">
-        <a href="{{ site.data.i18n.general.nav.software.link[page.lang] }}" style="color: inherit !important; text-decoration: none !important"><h5 class="panel-title">Open Source Software</h5></a>
+        <a href="{{ site.data.i18n.general.nav.software.link[page.lang] }}" class="panel-design"><h5 class="panel-title">Open Source Software</h5></a>
       </header>
-
-      <div class="panel-body" style="padding-bottom: 0px !important">
-        <div class="col-md-3" style="color: #3c763d; font-size: 50px">
-          <a href="{{ site.data.i18n.general.nav.software.link[page.lang] }}" style="color: inherit !important; text-decoration: none !important"><i class="fa fa-cog"></i></a>
+      <div class="panel-body mrgn-bttm-md">
+        <div class="col-md-3 font-size-50" style="color: #3c763d">
+          <a href="{{ site.data.i18n.general.nav.software.link[page.lang] }}" class="panel-design"><i class="fa fa-cog"></i></a>
         </div>
         <div class="col-md-9">
-          <p>Search open source software platforms used by Canadian public administrators.</p>
+          <p>Search open source software used by Canadian public administrations.</p>
         </div>
       </div>
-
     </section>
   </div>
 
   <div class="col-md-4">
     <section class="panel panel-warning">
-
       <header class="panel-heading">
-        <a href="{{ site.data.i18n.general.nav.standard.link[page.lang] }}" style="color: inherit !important; text-decoration: none !important"><h5 class="panel-title">Open Standards</h5></a>
+        <a href="{{ site.data.i18n.general.nav.standard.link[page.lang] }}" class="panel-design"><h5 class="panel-title">Open Standards</h5></a>
       </header>
-
-      <div class="panel-body" style="padding-bottom: 33px !important">
-        <div class="col-md-3" style="color: #8a6d3b; font-size: 50px">
-          <a href="{{ site.data.i18n.general.nav.standard.link[page.lang] }}" style="color: inherit !important; text-decoration: none !important"><i class="glyphicon glyphicon-list-alt"></i></a>
+      <div class="panel-body mrgn-bttm-xl">
+        <div class="col-md-3 font-size-50" style="color: #8a6d3b">
+          <a href="{{ site.data.i18n.general.nav.standard.link[page.lang] }}" class="panel-design"><i class="glyphicon glyphicon-list-alt"></i></a>
         </div>
         <div class="col-md-9">
-          <p>Search open standards used by Canadian public administrators.</p>
+          <p>Search open standards used by Canadian public administrations.</p>
         </div>
       </div>
-
     </section>
   </div>
 </div>
@@ -83,9 +73,7 @@ permalink: /en/index.html
   <div class="col-md-12">
     <h1 property="name">Documentation</h1>
   </div>
-
   <div class="col-md-12">
-
     <ul class="list-unstyled">
       <li>
         <details open>
@@ -102,7 +90,90 @@ permalink: /en/index.html
         </details>
       </li>
     </ul>
+  </div>
+</div>
 
+<div class="row profile">
+  <div class="col-md-12">
+    <h1 property="name">Learn More</h1>
+  </div>
+  <div class="col-md-12">
+    <div class="wb-tabs ignore-session mrgn-tp-sm">
+      <div class="tabpanels">
+        <details id="details-panel10">
+          <summary>About Us</summary>
+          <div class="col-md-1">
+            <i class="fas fa-users font-size-50" aria-hidden="true"></i>
+          </div>
+          <div class="col-md-11">
+            <p>The <i><strong>Municipal Innovation Pilot Project (MIPP)</strong></i> is an initiative aiming to support research and development of ‘open source solutions’ for all levels of government within Canada and beyond. The vision is to enable and support the pooling of investment for collective impact.</p>
+            <p>The <i><strong>Open Resource Exchange (ORE)</strong></i> is a particular project falling under the MIPP vision. It serves as a platform for the sharing of innovative ideas across all levels of government in Canada, creating a gathering space for open source solutions developed from coast to coast. It enables governments to:</p>
+            <ul>
+              <li><b>Share</b> open source solutions that can be replicable across Canada.</li>
+              <li><b>Download</b> open source solutions and execute in new environments.</li>
+              <li><b>Contribute</b> to existing open source solutions.</li>
+              <li><b>Learn</b> about open source software and open standards used by governments.</li>
+            </ul>
+          </div>
+        </details>
+        <details id="details-panel20">
+          <summary>Our Goals</summary>
+          <div class="col-md-1">
+            <i class="fa fa-bookmark font-size-50" aria-hidden="true"></i>
+          </div>
+          <div class="col-md-11">
+            <p>The <i><strong>Municipal Innovation Pilot Project</strong></i> vision is to bring together level of governments and related groups to collectively invest resources towards an open source digital solution to a common problem. The open resource exchange platform is the first step into achieving that goal.</p>
+            <p>Through this Open Resource Exchange platform, we aim to:  </p>
+            <ul>
+              <li><b>Facilitate</b> the collaboration not only across jurisdictions but also directly with citizens.</li>
+              <li><b>Help</b> governments and the open source community to find open source tools, developed or used by public administrations, meeting government standards.</li>
+              <li><b>Reduce</b> the cost of government digital infrastructure development through the reuse of open customizable digital solutions.</li>
+              <li><b>Improve</b> the speed and the ease of the government infrastructure development to better serve our users.</li>
+            </ul>
+          </div>
+        </details>
+        <details id="details-panel30">
+          <summary>Our Partners</summary>
+          <div class="col-md-1">
+            <i class="fa fa-user-plus font-size-50" aria-hidden="true"></i>
+          </div>
+          <div class="col-md-11">
+            <p>The <i><strong>Municipal Innovation Pilot Project</strong></i> is the result of a collaboration between a group of governments and other related groups.</p>
+            <p>Currently the project is led by a steering group made up of representation from: </p>
+            <ul>
+              <li>City of Montreal</li>
+              <li>City of Edmonton</li>
+              <li>City of Guelph</li>
+              <li>Region of Durham</li>
+              <li>Region of Niagara</li>
+              <li>City of Sarnia</li>
+              <li>MISA Ontario</li>
+              <li>RIMQ</li>
+              <li>FCM Innovation Network</li>
+              <li>Government of Canada</li>
+            </ul>
+            <p>You can join the Steering Committee or a strategic working group if you’re interested in developing communications, detailed business plans, developmental evaluation, and other key actions for this project pilot.</p>
+          </div>
+        </details>
+        <details id="details-panel40">
+          <summary>Contact Us</summary>
+          <div class="col-md-1">
+            <i class="fa fa-envelope font-size-50" aria-hidden="true"></i>
+          </div>
+          <div class="col-md-11">
+            <p>Contact MIPP Steering Group representatives:</p>
+            <p><strong>Derek Alton - Strategic Partnerships</strong></p>
+            <p>Treasury Board of Canada Secretariat / Government of Canada</p>
+            <p><u>Derek.Alton@tbs-sct.gc.ca</u> / Tel: 519-994-3581</p>
+
+            <p><strong>Bianca Tomazeli - Senior Advisor</strong></p>
+            <p>Architecture, Innovation and Security Technology Division</p>
+            <p>IT Service - City of Montreal </p>
+            <p><u>bianca.tomazeli@montreal.ca</u> / Tel: 438-922-8735</p>
+          </div>
+        </details>
+      </div>
+    </div>
   </div>
 </div>
 
