--- a/_pages/fr/index.html
+++ b/_pages/fr/index.html
@@ -10,7 +10,6 @@ permalink: /fr/index.html
     <h1 property="name" id="wb-cont">{{ site.data.i18n.general.head.title.fr }}</h1>
     <p>Découvrez comment les administrations publiques Canadiennes (fédérales, provinciales, territoriales et municipales) créent davantage de transparence et de responsabilisation, augmente la mobilisation citoyenne et favorise l’innovation et les possibilités économiques au moyen de normes ouvertes, logiciels libres, données ouvertes, d’information ouverte, de dialogue ouvert et du Gouvernement ouvert.</p>
   </div>
-
   <div class="col-md-4 margin-top-small hidden-sm hidden-xs">
     <img src="../assets/logo_canada-ogp.png" alt="Carte du Canada avec les couleurs du Partenariat pour un gouvernement ouvert" class="pull-right img-responsive thumbnail">
   </div>
@@ -19,62 +18,53 @@ permalink: /fr/index.html
 <div class="row profile">
   <div class="col-md-12">
     <h1 property="name">Services</h1>
-    <p>Les échanges de ressources ouvertes contiennent trois services principaux qui concentrent sur la partage de solutions dans un formart source ouvert. Le terme code source signifie les éléments accessibles au public qui sont librement disponibles.</p>
+    <p>Cette plateforme offre trois services principaux basés sur le partage de solutions dans un format source ouverte. Le terme source ouverte réfère aux éléments librement accessibles au public pour des fins d’utilisation, modification et redistribution.</p>
   </div>
-
   <div class="col-md-4">
     <section class="panel panel-info">
-
       <header class="panel-heading">
-        <a href="{{ site.data.i18n.general.nav.code.link[page.lang] }}" style="color: inherit !important; text-decoration: none !important"><h5 class="panel-title">Code source ouvert</h5></a>
+        <a href="{{ site.data.i18n.general.nav.code.link[page.lang] }}" class="panel-design"><h5 class="panel-title">Code source ouvert</h5></a>
       </header>
-
-      <div class="panel-body" style="padding-bottom: 62px !important">
-        <div class="col-md-3" style="color: #31708f; font-size: 50px">
-          <a href="{{ site.data.i18n.general.nav.code.link[page.lang] }}" style="color: inherit !important; text-decoration: none !important"><i class="fas fa-code"></i></a>
+      <div class="panel-body mrgn-bttm-md">
+        <div class="col-md-3 font-size-50" style="color: #31708f">
+          <a href="{{ site.data.i18n.general.nav.code.link[page.lang] }}" class="panel-design"><i class="fas fa-code"></i></a>
         </div>
         <div class="col-md-9">
-          <p>Recherchez des projets source ouverts et des répertoires de code.</p>
+          <p>Consultez les projets source ouverte développés par les niveaux du Gouvernement Canadien.</p>
         </div>
       </div>
-
     </section>
   </div>
 
   <div class="col-md-4">
     <section class="panel panel-success">
       <header class="panel-heading">
-        <a href="{{ site.data.i18n.general.nav.software.link[page.lang] }}" style="color: inherit !important; text-decoration: none !important"><h5 class="panel-title">Logiciels libres</h5></a>
+        <a href="{{ site.data.i18n.general.nav.software.link[page.lang] }}" class="panel-design"><h5 class="panel-title">Logiciels libres</h5></a>
       </header>
-
-      <div class="panel-body" style="padding-bottom: 0px !important">
-        <div class="col-md-3" style="color: #3c763d; font-size: 50px">
-          <a href="{{ site.data.i18n.general.nav.software.link[page.lang] }}" style="color: inherit !important; text-decoration: none !important"><i class="fa fa-cog"></i></a>
+      <div class="panel-body mrgn-bttm-xl">
+        <div class="col-md-3 font-size-50" style="color: #3c763d">
+          <a href="{{ site.data.i18n.general.nav.software.link[page.lang] }}" class="panel-design"><i class="fa fa-cog"></i></a>
         </div>
         <div class="col-md-9">
-          <p>Recherchez les plateformes de logiciels libres utilisés par les administrateurs publiques canadiens.</p>
+          <p>Consultez les logiciels libres utilisés par les niveaux du Gouvernement Canadien.</p>
         </div>
       </div>
-
     </section>
   </div>
 
   <div class="col-md-4">
     <section class="panel panel-warning">
-
       <header class="panel-heading">
-        <a href="{{ site.data.i18n.general.nav.standard.link[page.lang] }}" style="color: inherit !important; text-decoration: none !important"><h5 class="panel-title">Normes ouvertes</h5></a>
+        <a href="{{ site.data.i18n.general.nav.standard.link[page.lang] }}" class="panel-design"><h5 class="panel-title">Normes ouvertes</h5></a>
       </header>
-
-      <div class="panel-body" style="padding-bottom: 33px !important">
-        <div class="col-md-3" style="color: #8a6d3b; font-size: 50px">
-          <a href="{{ site.data.i18n.general.nav.standard.link[page.lang] }}" style="color: inherit !important; text-decoration: none !important"><i class="glyphicon glyphicon-list-alt"></i></a>
+      <div class="panel-body mrgn-bttm-xl">
+        <div class="col-md-3 font-size-50" style="color: #8a6d3b">
+          <a href="{{ site.data.i18n.general.nav.standard.link[page.lang] }}" class="panel-design"><i class="glyphicon glyphicon-list-alt"></i></a>
         </div>
         <div class="col-md-9">
-          <p>Recherchez les normes ouvertes utilisées par les administrateurs publiques canadiens.</p>
+          <p>Consultez les normes ouvertes utilisées par les niveaux du Gouvernement Canadien.</p>
         </div>
       </div>
-
     </section>
   </div>
 </div>
@@ -83,9 +73,7 @@ permalink: /fr/index.html
   <div class="col-md-12">
     <h1 property="name">Documentation</h1>
   </div>
-
   <div class="col-md-12">
-
     <ul class="list-unstyled">
       <li>
         <details open>
@@ -102,7 +90,90 @@ permalink: /fr/index.html
         </details>
       </li>
     </ul>
+  </div>
+</div>
 
+<div class="row profile">
+  <div class="col-md-12">
+    <h1 property="name">Apprendre davantage</h1>
+  </div>
+  <div class="col-md-12">
+    <div class="wb-tabs ignore-session mrgn-tp-sm">
+      <div class="tabpanels">
+        <details id="details-panel10">
+          <summary>À propos de nous</summary>
+          <div class="col-md-1">
+            <i class="fas fa-users" aria-hidden="true" style="font-size:48px;"></i>
+          </div>
+          <div class="col-md-11">
+            <p>Le <i><strong>Projet Pilote d’Innovation Municipale (PPIM)</strong></i> est une initiative visant à fournir du support à la recherche et au développement de solutions numériques ouvertes à travers une collaboration entre tous les niveaux du Gouvernement Canadien et au-delà. La vision est de fournir un support à la mise en commun des investissements pour un impact collectif.</p>
+            <p>L'<i><strong>Échange de Ressources Ouvert (ERO)</strong></i> est un projet résultant de cette vision. Il s’agit d’une plateforme de partage de projets ouverts entre les différentes administrations publiques canadiennes, leur permettant de:</p>
+            <ul>
+              <li><b>Partager</b> des solutions ouvertes qui pourront être utilisées à travers le Canada.</li>
+              <li><b>Télécharger</b> des solutions ouvertes pour leur réutilisation dans de nouveaux environnements.</li>
+              <li><b>Contribuer</b> aux solutions ouvertes existantes dans le catalogue de la plateforme.</li>
+              <li><b>Apprendre</b> sur les logiciels libres et normes ouvertes utilisés par des administrations publiques.</li>
+            </ul>
+          </div>
+        </details>
+        <details id="details-panel20">
+          <summary>Nos objectifs</summary>
+          <div class="col-md-1">
+            <i class="fa fa-bookmark font-size-50" aria-hidden="true"></i>
+          </div>
+          <div class="col-md-11">
+            <p>La vision du <i><strong>Projet Pilote d’Innovation Municipale</strong></i> est la mise en commun des efforts et ressources des niveaux du Gouvernement et des différents groupes concernés pour le développement d’une solution numérique ouverte qui répond à leurs besoins partagés. La plateforme échange de ressources ouverts est le premier pas vers l’accomplissement de cet objectif.</p>
+            <p>À travers cette plateforme, nous visons à:</p>
+            <ul>
+              <li><b>Faciliter</b> la collaboration, non seulement entre les juridictions, mais également avec les citoyens.</li>
+              <li><b>Aider</b> les administrations publiques et la communauté <i><strong>open source</i></strong> à trouver des outils ouverts respectant les standards gouvernementaux.</li>
+              <li><b>Réduire</b> le coût du développement des infrastructures numériques gouvernementales à travers la réutilisation des solutions numériques personnalisables.</li>
+              <li><b>Améliorer</b> la facilité d’accès et la vitesse de développement des infrastructures gouvernementales afin que ceux-ci puissent mieux servir leurs utilisateurs.</li>
+            </ul>
+          </div>
+        </details>
+        <details id="details-panel30">
+          <summary>Nos partenaires</summary>
+          <div class="col-md-1">
+            <i class="fa fa-user-plus font-size-50" aria-hidden="true"></i>
+          </div>
+          <div class="col-md-11">
+            <p>Le <i><strong>Projet Pilote d’Innovation Municipale</strong></i> est le résultat de la collaboration entre des groupes du gouvernement canadien et d’autres groupes concernés.</p>
+            <p>Actuellement, le projet est dirigé par un groupe de pilotage composé de représentants provenant de/du:</p>
+            <ul>
+              <li>La ville de Montréal</li>
+              <li>La ville d’Edmonton</li>
+              <li>La ville de Guelph</li>
+              <li>La région de Durham</li>
+              <li>La région de Niagara</li>
+              <li>La ville de Sarnia</li>
+              <li>MISA Ontario</li>
+              <li>RIMQ</li>
+              <li>Le réseau d’innovation de la FCM</li>
+              <li>Le Gouvernement du Canada</li>
+            </ul>
+            <p>Vous pouvez joindre le comité de pilotage ou un groupe de travail stratégique si vous souhaitez développer un réseau de communication, des plans d’affaires détaillés, une évaluation de développement et d’autres actions relatives à ce projet.</p>
+          </div>
+        </details>
+        <details id="details-panel40">
+          <summary>Contactez-nous</summary>
+          <div class="col-md-1">
+            <i class="fa fa-envelope font-size-50" aria-hidden="true"></i>
+          </div>
+          <div class="col-md-11">
+            <p>Contactez les représentants du groupe de pilotage:</p>
+            <p><strong>Derek Alton - Partenariats stratégiques</strong></p>
+            <p>Secrétariat du Conseil du Trésor du Canada / Gouvernement du Canada</p>
+            <p><u>Derek.Alton@tbs-sct.gc.ca</u> / Tel: 519-994-3581</p>
+
+            <p><strong>Bianca Tomazeli - Conseillère principale</strong></p>
+            <p>Direction de Technologie, Architecture, Innovation et Securité</p>
+            <p>Service TI - Ville de Montréal </p>
+            <p><u>bianca.tomazeli@montreal.ca</u> / Tel: 438-922-8735</p>
+          </div>
+        </details>
+      </div>
+    </div>
   </div>
 </div>
 
